--- a/ManageAppointments/ManageAppointments/LoginPage.xaml
+++ b/ManageAppointments/ManageAppointments/LoginPage.xaml
@@ -9,24 +9,24 @@
         <local:ProfileViewModel/>
     </ContentPage.BindingContext>
     <Grid ColumnDefinitions="0.5*, 0.5*" RowDefinitions="0.3*, 0.7*" 
-              Background="{OnIdiom Default=Transparent, Desktop=#83E9EE}">
-        <Border  Grid.ColumnSpan="{OnIdiom Default=2, Desktop=1}"  Stroke="Transparent"  Background="{OnIdiom Phone=#83E9EE,Desktop=Transparent}" 
-                    Grid.RowSpan="{OnIdiom Default=1, Desktop=2}">
+              Background="{OnPlatform Default=Transparent, WinUI=#83E9EE,MacCatalyst=#83E9EE}">
+        <Border  Grid.ColumnSpan="{OnPlatform Default=2, WinUI=1,MacCatalyst=1}"  Stroke="Transparent"  Background="{OnPlatform Default=#83E9EE,WinUI=Transparent,MacCatalyst=Transparent}" 
+                    Grid.RowSpan="{OnPlatform Default=1, WinUI=2,MacCatalyst=2}">
             <Border.StrokeShape>
                 <RoundRectangle CornerRadius="0,0,100,100"/>
             </Border.StrokeShape>
             <Image Source="login.png" Grid.Row="0"  Grid.Column="0"  HorizontalOptions="Center"  Aspect="AspectFit"/>
         </Border>
 
-        <Frame CornerRadius="10" Grid.Column="{OnIdiom Default=0, Desktop=1}"  BorderColor="White" HeightRequest="420" Background="White"
-                  Grid.Row="{OnIdiom Default=1, Desktop=0}" 
-                  WidthRequest="380" VerticalOptions="{OnIdiom Default=Start, Desktop=Center}"
-                  Grid.ColumnSpan="{OnIdiom Default=2, Desktop=1}" 
-                  Grid.RowSpan="{OnIdiom Default=1, Desktop=2}" >
+        <Frame CornerRadius="10" Grid.Column="{OnPlatform Default=0, WinUI=1,MacCatalyst=1}"  BorderColor="White" HeightRequest="420" Background="White"
+                  Grid.Row="{OnPlatform Default=1, WinUI=0,MacCatalyst=0}" 
+                  WidthRequest="380" VerticalOptions="{OnPlatform Default=Start, WinUI=Center,MacCatalyst=Center}"
+                  Grid.ColumnSpan="{OnPlatform Default=2, WinUI=1,MacCatalyst=1}" 
+                  Grid.RowSpan="{OnPlatform Default=1, WinUI=2,MacCatalyst=2}" >
             <Grid IsClippedToBounds="True" HeightRequest="420" >
                 <Grid.RowDefinitions>
                     <RowDefinition Height="90"/>
-                    <RowDefinition Height="{OnIdiom Default=180, Desktop=155}"/>
+                    <RowDefinition Height="{OnPlatform Default=180, WinUI=155,MacCatalyst= 155}"/>
                     <RowDefinition Height="50"/>
                     <RowDefinition Height="50"/>
                 </Grid.RowDefinitions>
