--- a/ManageAppointments/ManageAppointments/LoginPage.xaml
+++ b/ManageAppointments/ManageAppointments/LoginPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:ManageAppointments"
-             xmlns:system="clr-namespace:System;assembly=netstandard"
+             xmlns:system="clr-namespace:System;assembly=netstandard" NavigationPage.HasNavigationBar="False"
             xmlns:dataForm="clr-namespace:Syncfusion.Maui.DataForm;assembly=Syncfusion.Maui.DataForm"
              x:Class="ManageAppointments.LoginPage">
     <ContentPage.BindingContext>
