--- a/ManageAppointments/ManageAppointments/AppShell.xaml
+++ b/ManageAppointments/ManageAppointments/AppShell.xaml
@@ -4,7 +4,7 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:ManageAppointments"  Shell.TitleColor="Transparent" Shell.TabBarTitleColor="Transparent"
-    Shell.FlyoutBehavior="Locked" Shell.FlyoutItemIsVisible="True" >
+    Shell.FlyoutBehavior="{OnPlatform Android=Flyout,WinUI=Locked,MacCatalyst=Locked,iOS=Flyout}" Shell.FlyoutItemIsVisible="True" >
     <FlyoutItem Title="Profile"  >
         <ShellContent ContentTemplate="{DataTemplate local:ProfilePage}">
         </ShellContent>
