--- a/ManageAppointments/ManageAppointments/AppShell.xaml
+++ b/ManageAppointments/ManageAppointments/AppShell.xaml
@@ -2,14 +2,14 @@
 <Shell
     x:Class="ManageAppointments.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" FlyoutWidth="200" 
     xmlns:local="clr-namespace:ManageAppointments"  Shell.TitleColor="Transparent" Shell.TabBarTitleColor="Transparent"
     Shell.FlyoutBehavior="{OnPlatform Android=Flyout,WinUI=Locked,MacCatalyst=Locked,iOS=Flyout}" Shell.FlyoutItemIsVisible="True" >
-    <FlyoutItem Title="Profile"  >
+    <FlyoutItem Title="Profile" Icon="profilepage.png"  >
         <ShellContent ContentTemplate="{DataTemplate local:ProfilePage}">
         </ShellContent>
     </FlyoutItem>
-    <FlyoutItem Title="Scheduler" >
+    <FlyoutItem Title="Scheduler" Icon="scheduler.png" >
         <ShellContent ContentTemplate="{DataTemplate local:CalendarPage}"/>
     </FlyoutItem>
 
@@ -17,6 +17,6 @@
         <ShellContent ContentTemplate="{DataTemplate local:AppointmentsPage}"/>
     </FlyoutItem>
 
-    <MenuItem Clicked="MenuItem_Clicked" Text="Logout" />
+    <MenuItem Clicked="MenuItem_Clicked" IconImageSource="logout.png" Text="Logout"  />
  
 </Shell>
