--- a/ManageAppointments/ManageAppointments/LoginPage.xaml
+++ b/ManageAppointments/ManageAppointments/LoginPage.xaml
@@ -9,24 +9,26 @@
         <local:ProfileViewModel/>
     </ContentPage.BindingContext>
     <Grid ColumnDefinitions="0.5*, 0.5*" RowDefinitions="0.3*, 0.7*" 
-              Background="{OnPlatform Default=Transparent, WinUI=#83E9EE,MacCatalyst=#83E9EE}">
-        <Border  Grid.ColumnSpan="{OnPlatform Default=2, WinUI=1,MacCatalyst=1}"  Stroke="Transparent"  Background="{OnPlatform Default=#83E9EE,WinUI=Transparent,MacCatalyst=Transparent}" 
-                    Grid.RowSpan="{OnPlatform Default=1, WinUI=2,MacCatalyst=2}">
+              Background="{OnPlatform Default=Transparent, WinUI=#f8f7ff,MacCatalyst=#f8f7ff}">
+        <Border  Grid.ColumnSpan="{OnPlatform Default=2, WinUI=1,MacCatalyst=1}" 
+                 IsVisible="{OnPlatform Default=false,WinUI=true,MacCatalyst=true}"
+                 Stroke="Transparent"  Background="{OnPlatform Default=#f8f7ff,WinUI=Transparent,MacCatalyst=Transparent}" 
+                    Grid.RowSpan="2">
             <Border.StrokeShape>
                 <RoundRectangle CornerRadius="0,0,100,100"/>
             </Border.StrokeShape>
             <Image Source="login.png" Grid.Row="0"  Grid.Column="0"  HorizontalOptions="Center"  Aspect="AspectFit"/>
         </Border>
 
-        <Frame CornerRadius="10" Grid.Column="{OnPlatform Default=0, WinUI=1,MacCatalyst=1}"  BorderColor="White" HeightRequest="420" Background="White"
-                  Grid.Row="{OnPlatform Default=1, WinUI=0,MacCatalyst=0}" 
-                  WidthRequest="380" VerticalOptions="{OnPlatform Default=Start, WinUI=Center,MacCatalyst=Center}"
+        <Frame CornerRadius="10" Grid.Column="{OnPlatform Default=0, WinUI=1,MacCatalyst=1}" HorizontalOptions="Start"  BorderColor="White" HeightRequest="420" Background="#f2e6ff"
+                  Grid.Row="0" 
+                  WidthRequest="380" VerticalOptions="Center"
                   Grid.ColumnSpan="{OnPlatform Default=2, WinUI=1,MacCatalyst=1}" 
-                  Grid.RowSpan="{OnPlatform Default=1, WinUI=2,MacCatalyst=2}" >
+                  Grid.RowSpan="2" >
             <Grid IsClippedToBounds="True" HeightRequest="420" >
                 <Grid.RowDefinitions>
                     <RowDefinition Height="90"/>
-                    <RowDefinition Height="{OnPlatform Default=180, WinUI=155,MacCatalyst= 155}"/>
+                    <RowDefinition Height="{OnPlatform Default=175, WinUI=155,MacCatalyst= 155}"/>
                     <RowDefinition Height="50"/>
                     <RowDefinition Height="50"/>
                 </Grid.RowDefinitions>
@@ -42,22 +44,22 @@
                 </Label>
 
                 <dataForm:SfDataForm x:Name="loginForm"   LayoutType="TextInputLayout" 
-                    Grid.Row="1"  DataObject="{Binding LoginFormModel}" 
+                    Grid.Row="1"  DataObject="{Binding LoginFormModel}"  TextInputLayoutSettings="{dataForm:TextInputLayoutSettings FocusedStroke=#a64dff}"
                                      ValidationMode="PropertyChanged"  >
                 </dataForm:SfDataForm>
 
                 <Grid ColumnDefinitions="0.5*,0.5*" Grid.Row="2" Padding="12,0,0,0"  VerticalOptions="Start">
                     <HorizontalStackLayout VerticalOptions="Center" Padding="10,0,0,0" >
-                        <CheckBox Color="{StaticResource Primary}"/>
+                        <CheckBox Color="#a64dff"/>
                         <Label  Text="Remember me"  FontSize="12" VerticalOptions="Center" />
                     </HorizontalStackLayout>
-                    <Label Text="Forgot password?" Grid.Column="1"  TextColor="{StaticResource Primary}" HorizontalTextAlignment="Center" Padding="10,0,0,0" FontSize="12"  VerticalOptions="Center" />
+                    <Label Text="Forgot password?" Grid.Column="1"  TextColor="#a64dff" HorizontalTextAlignment="Center" Padding="10,0,0,0" FontSize="12"  VerticalOptions="Center" />
                 </Grid>
 
-                <Button Text="LOGIN" x:Name="loginButton" HeightRequest="30" VerticalOptions="End"
+                <Button Text="LOGIN" x:Name="loginButton" HeightRequest="40" VerticalOptions="End"
                         HorizontalOptions="Fill" Margin="20,0,20,0" CornerRadius="10"
                         Padding="0"  FontAttributes="Bold" Clicked="loginButton_Clicked"
-                        Grid.Row="3" Background="{StaticResource Primary}"/>
+                        Grid.Row="3" Background="#a64dff"/>
 
             </Grid>
         </Frame>
