--- a/ManageAppointments/ManageAppointments/LoginPage.xaml
+++ b/ManageAppointments/ManageAppointments/LoginPage.xaml
@@ -20,7 +20,7 @@
             <Image Source="login.png" Grid.Row="0"  Grid.Column="0"  HorizontalOptions="Center"  Aspect="AspectFit"/>
         </Border>
 
-        <Frame CornerRadius="10" Grid.Column="{OnPlatform Default=0, WinUI=1,MacCatalyst=1}" HorizontalOptions="Start"  BorderColor="White" HeightRequest="420" Background="#f2e6ff"
+        <Border Grid.Column="{OnPlatform Default=0, WinUI=1,MacCatalyst=1}" HorizontalOptions="Start"  HeightRequest="420" Background="#f2e6ff"
                   Grid.Row="0" 
                   WidthRequest="380" VerticalOptions="Center"
                   Grid.ColumnSpan="{OnPlatform Default=2, WinUI=1,MacCatalyst=1}" 
@@ -44,7 +44,7 @@
                 </Label>
 
                 <dataForm:SfDataForm x:Name="loginForm"   LayoutType="TextInputLayout" 
-                    Grid.Row="1"  DataObject="{Binding LoginFormModel}"  TextInputLayoutSettings="{dataForm:TextInputLayoutSettings FocusedStroke=#a64dff}"
+                    Grid.Row="1" x:DataType="local:ProfileViewModel" DataObject="{Binding LoginFormModel}"  TextInputLayoutSettings="{dataForm:TextInputLayoutSettings FocusedStroke=#a64dff}"
                                      ValidationMode="PropertyChanged"  >
                 </dataForm:SfDataForm>
 
@@ -62,6 +62,6 @@
                         Grid.Row="3" Background="#a64dff"/>
 
             </Grid>
-        </Frame>
+        </Border>
     </Grid>
 </ContentPage>
