--- a/ManageAppointments/ManageAppointments/AppointmentsPage.xaml
+++ b/ManageAppointments/ManageAppointments/AppointmentsPage.xaml
@@ -11,9 +11,9 @@
         <Grid RowDefinitions="52,*">
             <Grid.Resources>
                 <local:MonthToImageConverter x:Key="MonthToImageConverter"/>
-                <DataTemplate x:Key="AgendaHeaderTemplate">
+                <DataTemplate x:Key="AgendaHeaderTemplate" x:DataType="scheduler:SchedulerAppointment">
                     <Grid>
-                        <Image Aspect="Fill" Source="{Binding Converter={StaticResource MonthToImageConverter}}"/>
+                        <Image Aspect="Fill" x:DataType="local:MonthToImageConverter" Source="{Binding Converter={StaticResource MonthToImageConverter}}"/>
                         <Label x:Name="label" HorizontalOptions="Start" VerticalOptions="Start" TextColor="Black" FontSize="16" Padding="55, 20, 0, 0" Text="{Binding StringFormat='{0:MMMM yyyy}'}"/>
                     </Grid>
                 </DataTemplate>
@@ -33,7 +33,7 @@
             </VerticalStackLayout>
             </Grid>
             <Grid Background="#f8f7ff" Grid.Row="1" >
-                <scheduler:SfScheduler View="Agenda" x:Name="Scheduler" AppointmentsSource="{Binding Events}" DisplayDate="{Binding DisplayDate}">
+                <scheduler:SfScheduler View="Agenda" x:DataType="local:SchedulerViewModel" x:Name="Scheduler" AppointmentsSource="{Binding Events}" DisplayDate="{Binding DisplayDate}">
                     <scheduler:SfScheduler.AppointmentMapping>
                         <scheduler:SchedulerAppointmentMapping
                 Subject="EventName"
