--- a/ManageAppointments/ManageAppointments/CalendarPage.xaml
+++ b/ManageAppointments/ManageAppointments/CalendarPage.xaml
@@ -9,18 +9,21 @@
     </ContentPage.BindingContext>
     <ContentPage.Resources>
         <DataTemplate x:Key="dayAppointmentTemplate">
-            <Grid RowDefinitions="0.35*,0.65*" Background="{Binding DataItem.Background}" >
-                <Label Text="{Binding DataItem.EventName}" VerticalOptions="Start"  TextColor="White" LineBreakMode="WordWrap" Margin="5,0" FontSize="12" />
-                <Image Aspect="AspectFit" VerticalOptions="Start"  Grid.Row="1" HorizontalOptions="Center"
-                       HeightRequest="30" WidthRequest="30" 
-                       Source="{Binding DataItem.Location}"/>
-                
+            <Grid x:DataType="local:Appointment">
+                <Grid RowDefinitions="0.35*,0.65*" Background="{Binding Background}" x:DataType="local:Appointment">
+                    <Label Text="{Binding EventName}" VerticalOptions="Start"  TextColor="White" LineBreakMode="WordWrap" Margin="5,0" FontSize="12" />
+                    <Image Aspect="AspectFit" VerticalOptions="Start"  Grid.Row="1" HorizontalOptions="Center"
+           HeightRequest="30" WidthRequest="30" 
+           Source="{Binding Location}"/>
+
+                </Grid>
             </Grid>
+            
         </DataTemplate>
       
     </ContentPage.Resources>
     <Border Stroke="#F6F6F6" Background="#f8f7ff" StrokeThickness="2">
-        <scheduler:SfScheduler View="Week" AppointmentsSource="{Binding Events}" DisplayDate="{Binding DisplayDate}">
+        <scheduler:SfScheduler View="Week" x:DataType="local:SchedulerViewModel" AppointmentsSource="{Binding Events}" DisplayDate="{Binding DisplayDate}">
             <scheduler:SfScheduler.AppointmentMapping>
                 <scheduler:SchedulerAppointmentMapping
                 Subject="EventName"
